Use "posts" instead of "articles" when referring to the blog (en+he)

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -4,5 +4,5 @@
 		]
 	},
 	"blog-posts-title": "Recent posts from our blog",
-	"blog-posts-more": "Load more articles"
+	"blog-posts-more": "Load more posts"
 }
