--- a/i18n/he.json
+++ b/i18n/he.json
@@ -3,7 +3,7 @@
 		"authors": [
 		]
 	},
-    "blog-posts-title": "כתבות מהבלוג שלנו",
-    "blog-posts-more": "טען כתבות נוספות"
+    "blog-posts-title": "פוסטים מהבלוג שלנו",
+    "blog-posts-more": "טען פוסטים נוספים"
 
 }
