Make Hebrew text gender-neutral

--- a/i18n/he.json
+++ b/i18n/he.json
@@ -4,6 +4,6 @@
 		]
 	},
     "blog-posts-title": "פוסטים מהבלוג שלנו",
-    "blog-posts-more": "טען פוסטים נוספים",
+    "blog-posts-more": "הצגת פוסטים נוספים",
 	"blog-posts-loading": "בטעינה..."
 }
