Redesign & remove dynamic loading of additional posts

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -4,6 +4,5 @@
 		]
 	},
 	"blog-posts-title": "Recent posts from our blog",
-	"blog-posts-more": "Load more posts",
-	"blog-posts-loading": "Loading..."
+	"blog-posts-more": "Load more posts"
 }
