Fix the i18n json file

--- a/i18n/he.json
+++ b/i18n/he.json
@@ -4,5 +4,5 @@
 		]
 	},
     "blog-posts-title": "פוסטים מהבלוג שלנו",
-    "blog-posts-more": "הצגת פוסטים נוספים",
+    "blog-posts-more": "הצגת פוסטים נוספים"
 }
